<resources>
    <string name="app_name">Bingo Drum</string>
    <string name="iniciar_nueva_partida">new game</string>
    <string name="nueva_bola">New Ball</string>
    <string name="empezar">Start</string>
    <string name="linia">Line</string>
    <string name="bingo">Bingo</string>
    <string name="bombo_completo">Bingo complete!</string>
    <string name="es_bingo">They called Bingo!</string>
    <string name="numero_cartones">Number of cards</string>
    <string name="precio">Price of the card</string>
    <string name="continuar">Continue</string>
    <string name="porcentajes">Line 30% Bingo 70%</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="nueva_partida">New Game?</string>
    <string name="cantado_bingo">They called Bingo!</string>
    <string name="cantar_linia">They called Line!</string>
    <string name="linia_correcta">Is the Line correct?</string>
    <string name="si">yes</string>
    <string name="no">no</string>
    <string name="nueva_partida1">New Game</string>
    <string name="manual">Manual</string>
    <string name="automatico">Automatic</string>
    <string name="bombo_lleno">Full drum</string>
    <string name="linia_con_premio">Line\n%.1f</string>
    <string name="bingo_con_premio">Bingo\n%.1f</string>
    <string name="porcentaje_premios">Prizes</string>
    <string name="velocidad">Speed</string>
    <string name="description_contenido1"> Number of cards</string>
    <string name="description_contenido2"> Price of cards</string>
    <string name="play_button">Play button</string>
    <string name="description_imagen_fondo">Illustrated title of Bingo</string>


</resources>