<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bomboLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bola_saliente"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#4CAF50"
            android:textSize="100sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight = "1"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Línia"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text = "@string/linia"
                android:textSize="25sp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/botonNuevaBola"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_bola_nueva"
                android:text = "@string/nueva_bola"
                android:textSize="30sp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/bingo"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_bola_nueva"
                android:text = "@string/bingo"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

    <GridLayout
        android:id="@+id/bomboGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:columnCount="10"
        android:layout_marginBottom="80dp"
        android:rowCount="9">

    </GridLayout>


</LinearLayout>